--- a/style.css
+++ b/style.css
@@ -1,3 +1,77 @@
+nav {
+  padding: 2rem;
+  position: fixed;
+}
 .bg-light{
     background-color: white !important;
+}
+.first-img {
+  width: 100vw;
+}
+.btn-outline-success {
+  color: black;
+  border-color: black;
+}
+.btn-outline-success:hover {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+.card:hover {
+  transform: scale(1.05);
+  transition: 0.5s ease-in-out;
+}
+footer {
+  background: black;
+  font-size: 14px;
+}
+.first-line {
+  color: white;
+  border-bottom: 1px solid white;
+}
+.second-line a {
+  color: white;
+  text-decoration: none;
+}
+.flag {
+  color: white;
+}
+.mobile-footer {
+  border-top: 1px solid black;
+  color: white;
+  text-align: center;
+  font-size: 1.125rem;
+  font-weight: 300;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  align-items: center;
+  display: none;
+}
+@media screen and (max-width: 48rem) {
+  .second-line {
+    padding: 0 2rem;
+  }
+
+  .flag {
+    display: none;
+  }
+
+  .first-line {
+    text-align: center;
+  }
+
+  .mobile-footer {
+    display: block;
+  }
+}
+.col {
+  padding-bottom: 1rem;
+}
+.flag-img {
+  margin: 0 0.5rem;
+}
+
+.center{
+    margin: 0 auto;
+    display: block;
 }
